# COT_Using_RL_Formal_languages

./: .gitignore  README.md  commands.md  pyproject.toml  requirements.txt  run_dense_from_sft_plan.md  run_dense_reward_experiment.md  train_dense.slurm  train_dense_from_sft.slurm
configs/: anbn_grpo_process_terminal.yaml  parity_grpo_curriculum_boundary.yaml  parity_grpo_curriculum_cheap.yaml  parity_grpo_dense_from_sft.yaml  parity_grpo_dense_process_terminal.yaml  parity_grpo_from_sft.hpc_backup.yaml  parity_grpo_from_sft.yaml  parity_ppo_process_terminal.yaml  parity_sft.yaml
docs/: build_book_pdf.py  formal_rl_length_generalization_book.md  formal_rl_length_generalization_handbook.tex
experiments/: formal_rl_curriculum_grpo_short_report.tex  results_grpo.ipynb  results_grpo_save_plots.ipynb
formal_rl_length_generalization/: dense_reward.py  eval.py  evaluate.py  model.py  rl.py  tasks.py  tokenizer.py  train.py  utils.py
runs/: grpo_dense_3568255.out  grpo_dense_from_sft_3568480.out
runs/anbn_grpo_process_terminal/: metrics_step200.json  summary.json  train_metrics.json  train_metrics.jsonl
runs/parity_grpo_curriculum_boundary/: metrics_step100.json  metrics_step200.json  metrics_step300.json  metrics_step400.json  metrics_step500.json  summary.json  train_metrics.json  train_metrics.jsonl
runs/parity_grpo_curriculum_cheap/: summary.json  train_metrics.json  train_metrics.jsonl
runs/parity_grpo_curriculum_cheap_001/: summary.json  train_metrics.json  train_metrics.jsonl
runs/parity_grpo_from_sft/: metrics_step100.json  (+12 more)
tests/: test_dense_reward.py
(+77 files in other folders)
