[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "formal-rl-length-generalization"
version = "0.1.0"
description = "PPO/GRPO process-reward experiments for formal-language length generalization."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
